Fix: Hovering over buttons makes them illegible
In dark mode, hovering over buttons makes them illegible.

--- a/plugin/css/default.css
+++ b/plugin/css/default.css
@@ -140,4 +140,8 @@ button:active {
         background: #2b2b2b; 
         color: #eee; 
     }
+
+    button:hover {
+        color: #222222; 
+    }
 }
